fixed search result view so that card does not stretch height of container

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -2,6 +2,13 @@
   margin-bottom: 2em;
   border-radius: 15px;
   box-shadow: 5px 5px 20px 5px rgba(143,143,143,0.5);
+  max-height: 55vh;
+}
+
+.card-new {
+  margin-bottom: 2em;
+  border-radius: 15px;
+  box-shadow: 5px 5px 20px 5px rgba(143,143,143,0.5);
 }
 
 .card-img-top {
